<?php

declare(strict_types=1);

namespace SOLID\OCP\Database;

class FinancialDatabase
{
    public function query($sql, array $params = []): array
    {
        return [];
    }
}
